fixed xoverflow

--- a/awangran-site/src/component/preloader.css
+++ b/awangran-site/src/component/preloader.css
@@ -1,10 +1,11 @@
 .preloader{
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     background-color: rgba(255,146,139,1);
     color: aliceblue;
     position: fixed;
     bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
     z-index: 55;
