--- a/awangran-site/src/index.css
+++ b/awangran-site/src/index.css
@@ -10,7 +10,9 @@
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
   width: 100vw;
-  scroll-behavior: smooth
+  scroll-behavior: smooth;
+  overflow-x: clip;
+
 }
 
 .ubuntu-mono-regular {
@@ -52,6 +54,7 @@ body {
   justify-content: center;
   background: linear-gradient(180deg, rgb(242, 255, 236) 0%, rgba(205,234,192,1) 20%, rgba(225,209,166,1) 40%, rgba(255,172,129,1) 60%, rgba(255,146,139,1) 81%);
   -webkit-box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 #main {
